🚧 Fixed some spacing bugs

--- a/css/about.css
+++ b/css/about.css
@@ -57,6 +57,7 @@ page#about{
   width:48px;
   margin-right:5px;
   transition:scale .3s ease-out;
+  z-index:5;
 }
 .social:hover > img{
   scale:1.1;
@@ -65,6 +66,7 @@ page#about{
   width:100%;
   color:white;
   font-family:Inter;
+  z-index:5;
 }
 .social > .stitle{
   display:flex;
@@ -83,7 +85,7 @@ page#about{
   transform: translate(-12%,-12%);
   scale:4;
   filter:blur(10px);
-  z-index:-3;
+  z-index:1;
   opacity:.3;
   transition: scale .3s ease-out;
 }
