--- a/css/body.css
+++ b/css/body.css
@@ -1,5 +1,5 @@
 page#home{
-  height:100vh;
+  height:calc(100vh - 50px);
   width:calc(100vw - 25px);
   display: flex;
   flex-direction: column;
