--- a/css/work.css
+++ b/css/work.css
@@ -5,7 +5,7 @@
 }
 
 #work{
-  padding-top:10px;
+  padding-top:50px;
 }
 #work h2,#work span{
   color:white;
